修改静态文件检查问题（不包含java 8 lamda表达式检查）